CORS, change List.of with Collections.singletonList